--- a/details.html
+++ b/details.html
@@ -116,8 +116,8 @@
               fundraiser.push(doc.data());
             });
             document.querySelector(".start").textContent =
-              fundraiser[0].startdate;
-            document.querySelector(".end").textContent = fundraiser[0].enddate;
+              fundraiser[0].startDate;
+            document.querySelector(".end").textContent = fundraiser[0].endDate;
           });
 
         // med limits (kun 7 visning den nyeste )
