--- a/index.html
+++ b/index.html
@@ -110,10 +110,13 @@
             <div class="bigColumn" id="donator">
               <button class="donation">GIV DONATION</button> <br />
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi est
-                illo asperiores voluptates maiores, magni neque nesciunt veritatis
-                laborum libero saepe provident nostrum atque perspiciatis recusandae
-                corporis omnis esse illum.
+                  Hjælp Hund & Hjemløs er en fundraiser for de hjemløse og deres hunde i København. Hver vinter fryser og sulter flere dyr og mennesker på gaden. På denne side har du muligheden for at gøre en forskel, ved at donerer penge, tæpper, hundekurve, foder, fødevare og meget mere.
+                  Hver donation stor, som lille tæller og dit bidrag er en hjælp.</p><br>
+                  
+                  <p>Hjælp hund og hjemløs er en non-profit organisation, og alt overskud går ubeskåret til de hjemløse. Selv en lille donation kan gøre en stor forskel. 100 kr kan betale for hundemad i 14 dage eller til aftensmad i 5 dage. Et tæppe kan gøre forskellen mellem at skulle ligge på jorden, eller være beskyttet mod den direkte kulde.</p>
+                  <br>
+                  <p>Under giv donation finder du de forskellige kategorier, hvoraf du kan donerer flere ting på en gang. Tak for din støtte
+                  
               </p>
             </div>
           </section>
@@ -147,7 +150,6 @@
             <h2>Phone <br>
                 +45 41441015</h2>
             <div class="some">
-                <a href="#"><img src="image/some-01.svg"></a>
                 <a href="#"><img src="image/some-02.svg"></a>
                 <a href="#"><img src="image/some-03.svg"></a>
             </div>
