--- a/details.html
+++ b/details.html
@@ -15,20 +15,28 @@
       <nav>
         <img src="image/logo.svg" alt="" />
 
-        <ul class="menu">
-          <li>
-            <img src="image/icon_oversigt.svg" />
-            <a href="dashboard.html">OVERSIGT</a>
-          </li>
-          <li>
-            <img src="image/icon_detaljer.svg" />
-            <a href="details.html">DETALJER</a>
-          </li>
-          <li>
-            <img src="image/icon_settings.svg" />
-            <a href="settings.html">INDSTILLINGER</a>
-          </li>
-        </ul>
+        <div class="accordion">
+          <div class="bar1"></div>
+          <div class="bar2"></div>
+          <div class="bar3"></div>
+        </div>
+
+        <nav>
+          <ul class="menu">
+            <li>
+              <img src="image/icon_oversigt.svg" />
+              <a href="dashboard.html">OVERSIGT</a>
+            </li>
+            <li>
+              <img src="image/icon_detaljer.svg" />
+              <a href="details.html">DETALJER</a>
+            </li>
+            <li>
+              <img src="image/icon_settings.svg" />
+              <a href="settings.html">INDSTILLINGER</a>
+            </li>
+          </ul>
+        </nav>
       </nav>
 
       <article class="largeColumn mobileSetting" id="dashboard">
@@ -161,6 +169,27 @@
             count();
             countDate();
 
+            document.querySelector(".graph").children[0].style.height =
+              week1.length + "%";
+            document.querySelector(".graph").children[1].style.height =
+              week2.length + "%";
+            document.querySelector(".graph").children[2].style.height =
+              week3.length + "%";
+            document.querySelector(".graph").children[3].style.height =
+              week4.length + "%";
+            document.querySelector(".graph").children[3].style.height =
+              week5.length + "%";
+            document.querySelector(".graph").children[3].style.height =
+              week6.length + "%";
+            document.querySelector(".graph").children[3].style.height =
+              week7.length + "%";
+            document.querySelector(".graph").children[3].style.height =
+              week8.length + "%";
+            document.querySelector(".graph").children[3].style.height =
+              week9.length + "%";
+            document.querySelector(".graph").children[3].style.height =
+              week10.length + "%";
+
             sum = fyn.length + jylland.length + sjaelland.length;
 
             countFyn.textContent = Math.round((fyn.length / sum) * 100) + "%";
@@ -169,6 +198,20 @@
             countsjaelland.textContent =
               Math.round((sjaelland.length / sum) * 100) + "%";
           });
+      }
+
+      let acc = document.getElementsByClassName("accordion");
+      var i;
+      for (i = 0; i < acc.length; i++) {
+        acc[i].addEventListener("click", function() {
+          this.classList.toggle("active");
+          let panel = document.querySelector(".menu");
+          if (panel.style.display === "block") {
+            panel.style.display = "none";
+          } else {
+            panel.style.display = "block";
+          }
+        });
       }
 
       function test() {
