--- a/settings.html
+++ b/settings.html
@@ -14,20 +14,28 @@
       <nav>
         <img src="image/logo.svg" alt="" />
 
-        <ul class="menu">
-          <li>
-            <img src="image/icon_oversigt.svg" />
-            <a href="dashboard.html">OVERSIGT</a>
-          </li>
-          <li>
-            <img src="image/icon_detaljer.svg" />
-            <a href="details.html">DETALJER</a>
-          </li>
-          <li>
-            <img src="image/icon_settings.svg" />
-            <a href="settings.html">INDSTILLINGER</a>
-          </li>
-        </ul>
+        <div class="accordion">
+          <div class="bar1"></div>
+          <div class="bar2"></div>
+          <div class="bar3"></div>
+        </div>
+
+        <nav>
+          <ul class="menu">
+            <li>
+              <img src="image/icon_oversigt.svg" />
+              <a href="dashboard.html">OVERSIGT</a>
+            </li>
+            <li>
+              <img src="image/icon_detaljer.svg" />
+              <a href="details.html">DETALJER</a>
+            </li>
+            <li>
+              <img src="image/icon_settings.svg" />
+              <a href="settings.html">INDSTILLINGER</a>
+            </li>
+          </ul>
+        </nav>
       </nav>
       <article class="largeColumn mobileSetting" id="dashboard">
         <header class="largeColumn">
@@ -139,6 +147,20 @@
     let fullAmount = [];
     let moneyAmount = 0;
     let users = [];
+
+    let acc = document.getElementsByClassName("accordion");
+    var i;
+    for (i = 0; i < acc.length; i++) {
+      acc[i].addEventListener("click", function() {
+        this.classList.toggle("active");
+        let panel = document.querySelector(".menu");
+        if (panel.style.display === "block") {
+          panel.style.display = "none";
+        } else {
+          panel.style.display = "block";
+        }
+      });
+    }
 
     db.collection("users")
       .get()
