--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <option class="countryS" value="fyn">Fyn</option>
             </select>
             <br>
-            <input type="checkbox" name="annonym" value="Bike"> Vær annonym<br>
+            <input type="checkbox" name="annonym"> Giv anonym donation<br>
           
           <img src="image/donation1_img.jpg"></div>
             <div class="leftForm"><img class="img" src="image/icon_penge_kategori.svg"><br><input class="pengePlacering" type="text" name="amount" placeholder="Indtast beløb i DKK" /><br>
