--- a/details.html
+++ b/details.html
@@ -8,7 +8,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase-firestore.js"></script>
 
     <link rel="stylesheet" href="style/css/style.css" />
-    <title>Document</title>
+    <title>Fundraiser - Details</title>
   </head>
   <body>
     <div id="wrapper">
