--- a/settings.html
+++ b/settings.html
@@ -7,7 +7,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase-firestore.js"></script>
     <link rel="stylesheet" href="style/css/style.css" />
-    <title>Document</title>
+    <title>Fundraiser - settings</title>
   </head>
   <body>
     <div id="wrapper">
