--- a/dashboard.html
+++ b/dashboard.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/css/test.css">
     <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase-firestore.js"></script>
-    <title>Document</title>
+    <title>Fundraiser - Dashboard</title>
   </head>
   <body>
     <div id="wrapper">
