--- a/settings.html
+++ b/settings.html
@@ -34,6 +34,10 @@
               <img src="image/icon_settings.svg" />
               <a href="settings.html">INDSTILLINGER</a>
             </li>
+            <li>
+              <img src="image/icon_settings.svg" />
+              <a href="admin.html">ADMIN</a>
+            </li>
           </ul>
         </nav>
       </nav>
