--- a/admin.html
+++ b/admin.html
@@ -109,8 +109,10 @@
               /></span>
               <br />
               <div class="bottomPos">
-                <button id="createAdmin">OPRET PROFIL</button
-                ><img class="settingsAvatar" src="image/icon_mand.svg" />
+                <button id="createAdmin">OPRET PROFIL</button>
+
+                <img class="settingsAvatar" src="image/icon_mand.svg" /> <br />
+                <p class="oprettet">ny adminstrator nu oprettet</p>
               </div>
             </form>
           </div>
