--- a/dashboard.html
+++ b/dashboard.html
@@ -28,6 +28,10 @@
                 <li><img src="image/icon_oversigt.svg"> <a href="dashboard.html">OVERSIGT</a> </li>
                 <li><img src="image/icon_detaljer.svg"> <a href="details.html">DETALJER</a></li>
                 <li><img src="image/icon_settings.svg"> <a href="settings.html">INDSTILLINGER</a></li>
+                <li>
+                    <img src="image/icon_settings.svg" />
+                    <a href="admin.html">ADMIN</a>
+                  </li>
               </ul>
           </nav>
 
