small css changes

--- a/details.html
+++ b/details.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="style/css/style.css" />
     <title>Fundraiser - Details</title>
+    <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon" />
   </head>
   <body>
     <div id="wrapper">
@@ -64,10 +65,18 @@
             </div>
             <div class="map"></div>
             <div class="mapInfo">
-              JYLLAND:<span class="kortSpan"></span> FYN & ØERNE:<span
-                class="kortSpan"
-              ></span>
-              SJÆLLAND:<span></span>
+              <p>
+                JYLLAND: <br />
+                <span class="kortSpan"></span>
+              </p>
+              <p>
+                FYN & ØERNE: <br />
+                <span class="kortSpan"></span>
+              </p>
+              <p>
+                SJÆLLAND: <br />
+                <span class="kortSpan"></span>
+              </p>
             </div>
           </div>
         </section>
@@ -95,7 +104,15 @@
           </div>
           <div id="allDonation" class="bigColumn">
             DONATER
-            <ul id="myList"></ul>
+            <ul id="myList">
+              <li><span></span><span></span></li>
+              <li><span></span><span></span></li>
+              <li><span></span><span></span></li>
+              <li><span></span><span></span></li>
+              <li><span></span><span></span></li>
+              <li><span></span><span></span></li>
+              <li><span></span><span></span></li>
+            </ul>
           </div>
         </section>
         <footer class="largeColumn"></footer>
