--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase-firestore.js"></script>
     <title>Hjælp hund & Hjemløs - Fundraising</title>
+    <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon"/>
   </head>
   <body>
       <div class="popUp">
           <div class="headerPopUp"><img src="image/logo.svg">
           <button class="close">Luk vindue</button>
           </div>
-          <form id="add-cafe-form">
+          <form id="add-donation-form">
             <div class="rightForm">
             <div class="navnForm">Fornavn<br><input class="navnW" type="text" name="name" placeholder="" required /></div>
             <div class="efternavnForm">Efternavn<br><input class="eNavnW" type="text" name="lastname" placeholder="" required /><br></div>
@@ -28,7 +29,7 @@
               <option class="countryS" value="fyn">Fyn</option>
             </select>
             <br>
-            <input type="checkbox" name="Anonym"> Giv anonym donation<br>
+            <input type="checkbox" name="anonym"> Giv anonym donation<br>
           
           <img src="image/donation1_img.jpg"></div>
             <div class="leftForm"><img class="img" src="image/icon_penge_kategori.svg"><br><input class="pengePlacering" type="text" name="amount" placeholder="Indtast beløb i DKK" /><br>
@@ -150,7 +151,7 @@
             <h2>Phone <br>
                 +45 41441015</h2>
             <div class="some">
-                <a href="#"><img src="image/some-01.svg"></a>
+           
                 <a href="#"><img src="image/some-02.svg"></a>
                 <a href="#"><img src="image/some-03.svg"></a>
             </div>
