--- a/admin.html
+++ b/admin.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>Fundraiser - add admin</title>
+    <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon" />
     <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase-firestore.js"></script>
     <link rel="stylesheet" href="style/css/style.css" />
