--- a/dashboard.html
+++ b/dashboard.html
@@ -9,6 +9,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase-firestore.js"></script>
     <title>Fundraiser - Dashboard</title>
+    <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon"/>
   </head>
   <body>
     <div id="wrapper">
