--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase-firestore.js"></script>
     <link rel="stylesheet" href="style/css/style.css" />
     <title>Fundraiser - Login</title>
+    <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon" />
   </head>
   <body id="login">
     <div class="wrapper">
