--- a/settings.html
+++ b/settings.html
@@ -8,6 +8,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase-firestore.js"></script>
     <link rel="stylesheet" href="style/css/style.css" />
     <title>Fundraiser - settings</title>
+    <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon" />
   </head>
   <body>
     <div id="wrapper">
