chances for popup

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           </section>
           <footerIndex class="largeColumn">
             <h2>GET IN TOUCH</h2>
-            <p class="mail">STØT@HUNDOGHJEMLØS.DK</p>
+            <p class="mail">HJÆLP@HUNDOGHJEMLØS.DK</p>
             <h2>Phone <br>
                 +45 41441015</h2>
             <div class="some">
