--- a/admin.html
+++ b/admin.html
@@ -46,13 +46,13 @@
           <img src="image/icon_oversigt.svg" alt="" /><br />
           <h1>
             FUNDRAISER <br />
-            INDSTILLINGER
+            ADMIN
           </h1>
         </header>
         <section class="settings">
           <div id="profile">
             <br />
-            <h3>PROFIL</h3>
+            <h3>OPRET PROFIL</h3>
             <br /><br />
             <h3>PERSONLIGE OPLYSNINGER</h3>
             <br />
