--- a/admin.html
+++ b/admin.html
@@ -52,7 +52,7 @@
         <section class="settings">
           <div id="profile">
             <br />
-            <h3>OPRET PROFIL</h3>
+            <h3>TILFØJ NY ADMIN</h3>
             <br /><br />
             <h3>PERSONLIGE OPLYSNINGER</h3>
             <br />
