small changes on donation list

--- a/details.html
+++ b/details.html
@@ -104,15 +104,7 @@
           </div>
           <div id="allDonation" class="bigColumn">
             DONATER
-            <ul id="myList">
-              <li><span></span><span></span></li>
-              <li><span></span><span></span></li>
-              <li><span></span><span></span></li>
-              <li><span></span><span></span></li>
-              <li><span></span><span></span></li>
-              <li><span></span><span></span></li>
-              <li><span></span><span></span></li>
-            </ul>
+            <ul id="myList"></ul>
           </div>
         </section>
         <footer class="largeColumn"></footer>
