--- a/admin.html
+++ b/admin.html
@@ -109,7 +109,7 @@
               /></span>
               <br />
               <div class="bottomPos">
-                <button id="createAdmin">OPRET PROFIL</button>
+                <button id="createAdmin">TILFØJ ADMIN</button>
 
                 <img class="settingsAvatar" src="image/icon_mand.svg" /> <br />
                 <p class="oprettet">ny adminstrator nu oprettet</p>
