--- a/details.html
+++ b/details.html
@@ -65,18 +65,9 @@
             </div>
             <div class="map"></div>
             <div class="mapInfo">
-              <p>
-                JYLLAND: <br />
-                <span class="kortSpan"></span>
-              </p>
-              <p>
-                FYN & ØERNE: <br />
-                <span class="kortSpan"></span>
-              </p>
-              <p>
-                SJÆLLAND: <br />
-                <span class="kortSpan"></span>
-              </p>
+              <p>JYLLAND: <span class="kortSpan"></span></p>
+              <p>FYN & ØERNE: <span class="kortSpan"></span></p>
+              <p>SJÆLLAND: <span class="kortSpan"></span></p>
             </div>
           </div>
         </section>
